--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -16,6 +16,19 @@ pt-BR:
         restrict_dependent_destroy:
           has_one: Não é possível excluir o registro pois existe um %{record} dependente
           has_many: Não é possível excluir o registro pois existem %{record} dependentes
+      models:
+        inventario:
+          one: "Invetario"
+          other: "Invetarios"
+      attributes:
+        inventario:
+          nome: "Nome"
+          descricao: "Descrição"
+          preco: "Preço"
+        avaliacao:
+          nome: "Nome"
+          descricao: "Descrição"
+          preco: "Preço"
   date:
     abbr_day_names:
       - dom
